--- a/ham_station.services.yml
+++ b/ham_station.services.yml
@@ -7,3 +7,7 @@ services:
   ham_station.fcc_importer:
     class: Drupal\ham_station\Importers\FccImporter
     arguments: ['@database', '@logger.channel.ham_station']
+
+  ham_station.geocoder:
+    class: Drupal\ham_station\Geocoder
+    arguments: ['@config.factory', '@http_client', '@entity_type.manager', '@database', '@logger.channel.ham_station']
