Refactor for Ajax.

--- a/ham_station.routing.yml
+++ b/ham_station.routing.yml
@@ -14,3 +14,11 @@ ham_station.ham_neighbors:
     callsign: null
   requirements:
     _permission: 'access content'
+
+ham_station.ham_neighbors_ajax:
+  path: '/neighbors/ajax/{callsign}'
+  defaults:
+    _controller: '\Drupal\ham_station\Controller\DefaultController::hamNeighborsAjax'
+  requirements:
+    _method: 'POST'
+    _permission: 'access content'
