Views plugins for filter field and sort.

--- a/ham_station.services.yml
+++ b/ham_station.services.yml
@@ -15,3 +15,6 @@ services:
   ham_station.ham_neighbors:
     class: Drupal\ham_station\Neighbors\HamNeighborsService
     arguments: ['@form_builder', '@entity_type.manager', '@renderer']
+
+  ham_station.distance_service:
+    class: Drupal\ham_station\DistanceService
