Removed field_location.

--- a/config/install/core.entity_form_display.ham_station.ham_station.default.yml
+++ b/config/install/core.entity_form_display.ham_station.ham_station.default.yml
@@ -1,12 +1,12 @@
+uuid: aa95a7cf-e8e5-46d5-8279-f7e3f1f5ab11
 langcode: en
 status: true
 dependencies:
-  config:
-    - field.field.ham_station.ham_station.field_location
   module:
     - address
-    - geolocation
     - ham_station
+_core:
+  default_config_hash: Aasp_YrDhigZAWmHl8vKOtzwJaxa14jYFhGH48imhZQ
 id: ham_station.ham_station.default
 targetEntityType: ham_station
 bundle: ham_station
@@ -41,12 +41,6 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_location:
-    weight: 47
-    settings: {  }
-    third_party_settings: {  }
-    type: geolocation_latlng
-    region: content
   first_name:
     type: string_textfield
     weight: 1
@@ -55,6 +49,20 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  geocode_response:
+    type: string_textfield
+    weight: 10
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  geocode_status:
+    weight: 9
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
   geolocation_status:
     weight: 9
     region: content
@@ -64,6 +72,22 @@ content:
   last_name:
     type: string_textfield
     weight: 3
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  latitude:
+    type: string_textfield
+    weight: 11
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  longitude:
+    type: string_textfield
+    weight: 12
     region: content
     settings:
       size: 60
