Show geocode report via ajax.

--- a/ham_station.routing.yml
+++ b/ham_station.routing.yml
@@ -29,3 +29,10 @@ ham_station.states_done_ajax:
     _controller: '\Drupal\ham_station\Controller\DefaultController::statesDoneAjax'
   requirements:
     _permission: 'access content'
+
+ham_station.geocode_report_ajax:
+  path: '/neighbors-ajax/geocode-report-ajax'
+  defaults:
+    _controller: '\Drupal\ham_station\Controller\DefaultController::geocodeReportAjax'
+  requirements:
+    _permission: 'access content'
