Invalidate cache on geocoding batch.

--- a/ham_station.services.yml
+++ b/ham_station.services.yml
@@ -10,7 +10,7 @@ services:
 
   ham_station.geocoder:
     class: Drupal\ham_station\Geocoder
-    arguments: ['@config.factory', '@http_client', '@entity_type.manager', '@database', '@logger.channel.ham_station']
+    arguments: ['@config.factory', '@http_client', '@entity_type.manager', '@database', '@logger.channel.ham_station', '@cache.default']
 
   ham_station.ham_neighbors:
     class: Drupal\ham_station\Neighbors\HamNeighborsService
