Grid square calculator.

--- a/ham_station.services.yml
+++ b/ham_station.services.yml
@@ -22,3 +22,6 @@ services:
   ham_station.report_service:
     class: Drupal\ham_station\ReportService
     arguments: ['@database', '@cache.default']
+
+  ham_station.grid_service:
+    class: Drupal\ham_station\GridService
