--- a/ham_station.links.action.yml
+++ b/ham_station.links.action.yml
@@ -8,3 +8,8 @@ entity.ham_address.add_form:
   title: 'Add Ham address'
   appears_on:
     - entity.ham_address.collection
+entity.ham_location.add_form:
+  route_name: entity.ham_location.add_form
+  title: 'Add Ham location'
+  appears_on:
+    - entity.ham_location.collection
